kubernetes/applications/media/deluge-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deluge
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - deluge.rosenvall.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: deluge
          port: 8112
